create auth route and update profile route
